--- a/package.json
+++ b/package.json
@@ -3,13 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@mui/material": "^5.14.1",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.0",
+    "mdb-react-ui-kit": "^6.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-photo-album": "^2.2.2",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-wavify": "^1.8.3",
+    "styled-components": "^6.0.4",
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.11.4"
   },
   "scripts": {
     "start": "react-scripts start",
