--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-dom": "^18.2.0",
     "react-photo-album": "^2.2.2",
     "react-router-dom": "^6.14.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "react-wavify": "^1.8.3",
     "styled-components": "^6.0.4",
     "web-vitals": "^2.1.4",
